Ensure modal controls are spaced correctly on smaller viewports

--- a/src/app/components/wine/wine-detailed.component.scss
+++ b/src/app/components/wine/wine-detailed.component.scss
@@ -52,6 +52,8 @@
 .modal-control-container {
   text-align: center;
   margin: 10px auto;
+  display: inline-block;
+  width: 100%;
 }
 
 /**
